--- a/navbar.html
+++ b/navbar.html
@@ -99,7 +99,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container d-flex">
             <!-- Logo for mobile view (always visible) -->
-            <a class="navbar-brand d-lg-none d-flex navbar-mobile" href="homepage.html">
+            <a class="navbar-brand d-lg-none d-flex navbar-mobile" href="index.html">
                 <img src="assets/images/logo_energaze.png" class="energaze-logo-nav" alt="EnerGaze Logo" width="20">
                 <h2 class="energaze-title-nav">EnerGaze</h2>
             </a>
@@ -112,14 +112,14 @@
                 <ul class="navbar-nav">
                     <!-- Logo for desktop view (only visible on large screens) -->
                     <li class="nav-item d-none d-lg-block">
-                        <a class="navbar-brand mx-3" href="homepage.html">
+                        <a class="navbar-brand mx-3" href="index.html">
                             <img src="assets/images/logo_energaze.png" alt="EnerGaze Logo" width="20">
                         </a>
                     </li>
-                    <li class="nav-item mx-2"><a class="nav-link" href="homepage.html">Home</a></li>
+                    <li class="nav-item mx-2"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item mx-2"><a class="nav-link" href="monitoring.html">Monitoring</a></li>
                     <li class="nav-item mx-2"><a class="nav-link" href="monitoring.html#gps">GPS</a></li>
-                    <li class="nav-item mx-2"><a class="nav-link" href="homepage.html#about">About</a></li>
+                    <li class="nav-item mx-2"><a class="nav-link" href="index.html#about">About</a></li>
                     <li class="nav-item mx-2"><a class="nav-link" href="login-page.html">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
