--- a/user-page.html
+++ b/user-page.html
@@ -45,7 +45,7 @@
             <h2>Hello,</h2>
             <h1>User (nama depan)</h1>
             <p>Curious about GROVE?</p>
-            <a href="homepage.html#questions" class="btn btn-primary my-1 btn-ask-away rounded-pill">Ask away!</a>
+            <a href="index.html#questions" class="btn btn-primary my-1 btn-ask-away rounded-pill">Ask away!</a>
             <p2>Question and/or suggestions that you have already submitted will be listed below.</p2>
             <div class="container questions-list" placeholder="Question and/or suggestions that you have already  submitted will be listed below." id="paragraph">
                 <!-- buat questions -->
