--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>EnerGaze - Home</title>
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="css/home-monitoring.css">
     <link rel="icon" type="image/png" href="assets/images/logo_energaze.png">
 </head>
@@ -120,7 +121,7 @@
                     <img src="assets/images/3d_grove_sp_t.png" alt="EnerGaze Vehicle" class="energaze-question-img">
                 </div>
                 <div class="col-md col-form">
-                    <form class="form-style">
+                    <form id="question-form" class="form-style">
                         <div class="form-group">
                             <input type="text" class="form-control form-subject" placeholder="Subject" required style="height: 10%;">
 
@@ -128,7 +129,21 @@
                         <div class="form-group">
                             <textarea class="form-control form-question-content" rows="4" placeholder="Paragraph of questions..." required style="resize: none; height: 20rem;"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-submit">Submit</button>
+                        <button type="submit" id="submit-question-btn" class="btn btn-primary btn-submit">Submit</button>
+
+                        <!-- codingan tes untuk nampilin popup login error -->
+                        <!-- <div id="modalContainer"></div>
+                        <script>
+                        $('#question-form').on('submit', function(event) {
+                            event.preventDefault();
+                            $('#submit-question-btn').on('click', function() {
+                                $('#modalContainer').load('question-popup-failed.html', function() {
+                                $('#myModal').modal('show');
+                                });
+                            });
+                        });
+                        </script> -->
+                        
                     </form> 
                 </div>
             </div>
@@ -153,8 +168,7 @@
     </footer>
     
     <!-- Bootstrap JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>     
 </body>
 </html>
