--- a/login-page.html
+++ b/login-page.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EnerGaze - Log In</title>
-    <link rel="stylesheet" href="css/login.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="icon" type="image/png" href="assets/images/logo_energaze.png">
+    <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
 
@@ -46,9 +47,18 @@
                 <label for="formusername" class="form-label">PASSWORD</label>
                 <input id="formusername" type="password" class="form-control"  placeholder="Password">
             </div>
-            <a href="user-page.html">
-                <button class="submit-btn btn-login">Log In</button>   
-            </a>
+            <button id="login-btn" class="submit-btn btn-login">Log In</button>
+
+            <!-- codingan tes untuk nampilin popup login error -->
+            <div id="modalContainer"></div>
+            <script>
+            $('#login-btn').on('click', function() {
+                $('#modalContainer').load('login-popup-failed.html', function() {
+                $('#myModal').modal('show');
+                });
+            });
+            </script>
+
             <a href="forgot-password-page.html" class="forgot-password">Forgot Password?</a>
         </div>
     </div>
@@ -72,8 +82,7 @@
     </footer>
     
     <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>     
 </body>
 </html>
