--- a/sign-up-page.html
+++ b/sign-up-page.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EnerGaze - Sign Up</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="icon" type="image/png" href="assets/images/logo_energaze.png">
     <link rel="stylesheet" href="css/sign-up.css">
 </head>
@@ -72,11 +73,20 @@
                 <label for="phone-number" class="form-label">PHONE NUMBER</label>
                 <input type="tel" id="phone-number" placeholder="Phone number">
             </div>
-            <a href="sign-up-page-success.html">
-                <button type="button" class="submit-btn">Sign Up</button>
-            </a>
+            <button type="button" id="sign-up-btn" class="submit-btn">Sign Up</button>
         </div>
     </div>
+
+    <!-- codingan tes untuk nampilin popup regis salah -->
+    <div id="modalContainer"></div>
+    <script>
+      $('#sign-up-btn').on('click', function() {
+        $('#modalContainer').load('sign-up-popup.html', function() {
+          $('#myModal').modal('show');
+        });
+      });
+    </script>
+  
 
     <p id="penjelasan" >EnerGaze merupakan website yang berfokus pada penampilan statistik komponen alat dan tampilan dari integrasi GPS yang dipasang di pada GROVE.</p>
 
@@ -98,8 +108,7 @@
     </footer>
     
     <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>     
 </body>
 </html>
