--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         $('#question-form').on('submit', function(event) {
                             event.preventDefault();
                             $('#submit-question-btn').on('click', function() {
-                                $('#modalContainer').load('question-popup-failed.html', function() {
+                                $('#modalContainer').load('popups/question-popup-failed.html', function() {
                                 $('#myModal').modal('show');
                                 });
                             });
