--- a/login-page.html
+++ b/login-page.html
@@ -50,14 +50,14 @@
             <button id="login-btn" class="submit-btn btn-login">Log In</button>
 
             <!-- codingan tes untuk nampilin popup login error -->
-            <div id="modalContainer"></div>
+            <!-- <div id="modalContainer"></div>
             <script>
             $('#login-btn').on('click', function() {
-                $('#modalContainer').load('login-popup-failed.html', function() {
+                $('#modalContainer').load('popups/login-popup-failed.html', function() {
                 $('#myModal').modal('show');
                 });
             });
-            </script>
+            </script> -->
 
             <a href="forgot-password-page.html" class="forgot-password">Forgot Password?</a>
         </div>
