--- a/sign-up-page.html
+++ b/sign-up-page.html
@@ -78,14 +78,14 @@
     </div>
 
     <!-- codingan tes untuk nampilin popup regis salah -->
-    <div id="modalContainer"></div>
+    <!-- <div id="modalContainer"></div>
     <script>
       $('#sign-up-btn').on('click', function() {
-        $('#modalContainer').load('sign-up-popup.html', function() {
+        $('#modalContainer').load('popups/sign-up-popup.html', function() {
           $('#myModal').modal('show');
         });
       });
-    </script>
+    </script> -->
   
 
     <p id="penjelasan" >EnerGaze merupakan website yang berfokus pada penampilan statistik komponen alat dan tampilan dari integrasi GPS yang dipasang di pada GROVE.</p>
